# mandari

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  DEPENDENCIES.md  DEPLOYMENT.md  Makefile  README.md  SECURITY.md  backup.sh  docker-compose.yml  install.sh  pyproject.toml  sync-to-public.sh  update.sh
ingestor/: Dockerfile  README.md  pyproject.toml
ingestor/src/: __init__.py  circuit_breaker.py  config.py  main.py  metrics.py  sources.py
ingestor/src/client/: oparl_client.py
ingestor/src/extraction/: extractor.py
ingestor/src/indexing/: document_builders.py  meilisearch.py
ingestor/src/storage/: database.py  models.py
ingestor/src/sync/: __init__.py  orchestrator.py  processor.py
ingestor/tests/: __init__.py  conftest.py  test_client.py
mandari/: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  docker-entrypoint.sh  manage.py  package.json  pyproject.toml  requirements.txt  start_caddy.bat  start_django.bat  start_server.bat  tailwind.config.js
mandari/apps/: __init__.py
mandari/apps/accounts/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mandari/apps/accounts/migrations/: 0001_initial.py
mandari/apps/common/: __init__.py  admin.py  apps.py  email.py  email_backend.py  encryption.py  middleware.py  mixins.py  models.py  permissions.py
mandari/apps/common/migrations/: 0001_initial.py  0002_add_nebius_api_key.py
mandari/apps/common/templatetags/: permission_tags.py
mandari/apps/session/: __init__.py  admin.py  apps.py  middleware.py  models.py  permissions.py  urls.py  views.py
mandari/apps/session/api/: __init__.py  views.py
mandari/apps/session/migrations/: 0001_initial.py  __init__.py
mandari/apps/session/services/: __init__.py  application_service.py
mandari/apps/tenants/: __init__.py  admin.py  apps.py  middleware.py  models.py  signals.py
mandari/apps/tenants/migrations/: 0001_initial.py  0002_populate_permissions.py  0003_make_owner_nullable.py  0004_membership_oparl_committees.py  0005_add_coalition_and_email_fields.py  0006_add_is_sworn_in_to_membership.py
mandari/apps/work/: __init__.py  admin.py  apps.py  background_tasks.py  models.py  tasks.py  urls.py
mandari/apps/work/dashboard/: views.py
mandari/apps/work/faction/: forms.py  models.py  services.py  views.py
mandari/apps/work/meetings/: forms.py  models.py  views.py
mandari/apps/work/migrations/: 0001_initial.py  0002_add_notification_models.py  0003_add_task_status_and_position.py  0004_add_support_knowledge_base_models.py  0005_initial_knowledge_base_content.py  0006_add_motion_types_and_letterheads.py  0007_motion_deleted_at_alter_motion_status.py  0008_remove_agendaitemposition_estimated_speech_duration_and_more.py  0009_alter_task_description_alter_task_title.py  0010_add_agenda_visibility.py  0011_faction_approval_workflow.py  0012_add_support_ticket_status_fields.py  0013_extend_motion_workflow.py  0014_add_factionagendaitem_parent.py  0015_add_guest_support_to_attendance.py  0016_add_paper_comment_model.py  0017_add_proposal_and_protocol_status.py  0017_alter_factionattendance_unique_together.py  0018_add_motion_visibility.py  0019_add_contact_request.py  0020_add_task_visibility.py
mandari/apps/work/motions/: forms.py  (+7 more)
mandari/insight_ai/: __init__.py  apps.py
mandari/insight_ai/providers/: __init__.py  base.py  nebius.py
mandari/insight_ai/services/: __init__.py  prompts.py  summarizer.py
mandari/insight_content/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
mandari/insight_content/migrations/: 0001_initial.py  0002_alter_blogpost_author.py  0003_alter_blogpost_author.py
mandari/insight_core/: __init__.py  admin.py  admin_dashboard.py  api.py  api_urls.py  apps.py  context_processors.py  dashboard.py  models.py  ranking.py  seo.py  signals.py  sitemaps.py  urls.py  views.py
mandari/insight_core/migrations/: 0001_initial.py  0002_add_location_consultation_legislativeterm.py  0003_add_body_display_name_and_logo.py  0004_change_logo_to_filefield.py  0005_add_sync_fields.py  0006_add_meeting_organizations.py  0007_add_location_mapping.py  0008_add_geo_fields_and_tile_cache.py  0009_oparlfile_body_oparlfile_file_date_oparlfile_meeting_and_more.py  0010_add_contact_request.py  0011_text_extraction_and_seo.py
mandari/insight_core/services/: __init__.py  document_extraction.py  mistral_ocr.py  search_documents.py  search_service.py  text_extraction_queue.py
mandari/insight_core/templatetags/: __init__.py  markdownify.py
mandari/insight_search/: __init__.py  apps.py  synonyms.py
mandari/insight_sync/: __init__.py  apps.py  tasks.py
mandari/mandari/: __init__.py  admin_utils.py  asgi.py  settings.py  urls.py  wsgi.py
mandari/static/css/: input.css  output.css  styles.css
mandari/static/js/: notifications.js
mandari/templates/: 400.html  403.html  404.html  500.html  base.html  base_insight.html  base_ris.html
mandari/templates/accounts/: base_auth.html  logged_out.html  login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html
mandari/templates/admin/: index.html
mandari/templates/components/: body_dropdown.html  chatbot_popup.html  city_search_modal.html  document_viewer.html  footer.html  insight_footer.html  insight_sidebar.html  navbar.html  search_bar.html  text_viewer.html
mandari/templates/errors/: base_error.html  maintenance.html
mandari/templates/pages/: chat.html  coming_soon.html  home.html  imprint.html  landing.html  map.html  privacy.html  search.html
mandari/templates/partials/: file_list_items.html  meeting_list_items.html  organization_list_items.html  paper_list_items.html  paper_summary.html  person_list_items.html  search_results.html
mandari/templates/session/: base_session.html  dashboard.html
mandari/templates/work/: base_work.html
mandari/tests/: __init__.py  test_basic.py
shared/: pyproject.toml
shared/mandari_oparl/: __init__.py  base.py  entities.py  enums.py  utils.py
(+312 files in other folders)
