# Mandari - Root Python Configuration
# This file configures shared Python settings for the monorepo

[project]
name = "mandari"
version = "0.1.0"
description = "Open-Source-Plattform für kommunalpolitische Transparenz"
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.12"
authors = [{ name = "Mandari Contributors" }]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "node_modules",
    "_old",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["_old", "node_modules"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/*/tests"]
