# Mandari - Root Python Configuration
# This file configures shared Python settings for the monorepo

[project]
name = "mandari"
version = "0.1.0"
description = "Open-Source-Plattform für kommunalpolitische Transparenz"
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.12"
authors = [{ name = "Mandari Contributors" }]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "node_modules",
    "_old",
    "*/migrations/*",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module import not at top (Django settings pattern)
    "N806",   # non-lowercase variable in function (Django patterns)
    "DJ001",  # nullable string fields (existing models)
    "DJ007",  # all with model form
    "DJ008",  # model without __str__
    "DJ012",  # unordered body content
]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["_old", "node_modules"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/*/tests"]
